Este es un commit de prueba

--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <title>Curriculum Vitae: Darwin Díaz González</title>
 </head>
 <body>
-    
+    <h1>Curriculum Vitae</h1>
+    <section>  
+        <h2>Name</h2>
+        <p>Darwin Díaz González</p>
+    </section>
+    <section>
+        <h2>Contact information</h2>
+        <ul>
+            <li>Email: dldiaz@espol.edu.ec</li>
+            <li>Phone: 0992298014</li>
+            <li>Linkedin: https://www.linkedin.com/in/darwin-diaz-gonz%C3%A1lez</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Summary</h2>
+        <p>A passionate and results-driven web developer. Proficient in front-end and back-end development, with expertise in HTML, CSS, JavaScript, and React. Experienced in collaborating with cross-functional teams to deliver scalable and responsive solutions. Eager to apply skills to create seamless digital experiences for users.</p>
+    </section>
+    <section>
+        <h2>Skills</h2>
+        <h3>Technical skills</h3>
+        <ul>
+            <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
+            <li>Frameworks/Libraries: React, Angular, Node.js</li>
+            <li>Tools: Git, GitHub</li>
+            <li>Databases: MySQL</li>
+            <li>Design: Responsive Web Design</li>
+            <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
+        </ul>
+        <h3>Soft skills</h3>
+        <ul>
+            <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
+            <li>Frameworks/Libraries: React, Angular, Node.js</li>
+            <li>Tools: Git, GitHub</li>
+            <li>Databases: MySQL</li>
+            <li>Design: Responsive Web Design</li>
+            <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
+        </ul>
+    </section>
 </body>
 </html>
