--- a/index.html
+++ b/index.html
@@ -1,51 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="currículum, ingeniería en computación, desarrollador web, programación, HTML, CV digital">
+    <meta description="Currículum Vitae digital de Darwin Díaz, estudiante de Ingeniería en Computación.">
+    <meta name="author" content="Darwin Díaz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae: Darwin Díaz González</title>
+    <title>Currículum Vitae - Darwin Díaz</title>
 </head>
 <body>
     <header>
-        <h1>Darwin Díaz González</h1>
-        <section>
-            <h2>Contact information</h2>
+        <h1>Darwin Díaz</h1>
+        <p>Estudiante de Ingeniería en Computación | Desarrollador Web</p>
+        <nav>
             <ul>
-                <li>Email: dldiaz@espol.edu.ec</li>
-                <li>Phone: 0992298014</li>
-                <li>Linkedin: https://www.linkedin.com/in/darwin-diaz-gonz%C3%A1lez</li>
+                <li><a href="#perfil">Perfil Profesional</a></li>
+                <li><a href="#educacion">Educación</a></li>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
             </ul>
-        </section>
+        </nav>
     </header>
     <main>
-        <section>
-            <h2>Summary</h2>
-            <p>A passionate and results-driven web developer. Proficient in front-end and back-end development, with expertise in HTML, CSS, JavaScript, and React. Experienced in collaborating with cross-functional teams to deliver scalable and responsive solutions. Eager to apply skills to create seamless digital experiences for users.</p>
+        <section id="perfil">
+            <h2>Perfil Profesional</h2>
+            <p>Soy estudiante de Ingeniería en Computación con interés en el desarrollo de software, la ciberseguridad y el análisis de datos. Me apasiona aprender nuevas tecnologías y aplicarlas para resolver problemas reales de manera eficiente.</p>
         </section>
-        <section>
-            <h2>Skills</h2>
-            <h3>Technical skills</h3>
+        <section id="educacion">
+            <h2>Educación</h2>
             <ul>
-                <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
-                <li>Frameworks/Libraries: React, Angular, Node.js</li>
-                <li>Tools: Git, GitHub</li>
-                <li>Databases: MySQL</li>
-                <li>Design: Responsive Web Design</li>
-                <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
+                <li><strong>Escuela Superior Politécnica del Litoral (ESPOL)</strong> - Ingeniería en Computación (2023 - Presente)</li>
+                <li><strong>Unidad Educativa Fiscal Amarilis Fuentes Alcívar</strong> - Bachillerato Técnico (2016 - 2023)</li>
             </ul>
-            <h3>Soft skills</h3>
+        </section>
+        <section id="experiencia">
+            <h2>Experiencia Laboral</h2>
             <ul>
-                <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
-                <li>Frameworks/Libraries: React, Angular, Node.js</li>
-                <li>Tools: Git, GitHub</li>
-                <li>Databases: MySQL</li>
-                <li>Design: Responsive Web Design</li>
-                <li>Languages: HTML, CSS, JavaScript, Python, SQL</li>
+                <li><strong>Pasante en Servicios Técnicos Industriales TEINSERSA S.A.</strong> - Gestión digital de inventarios (2022)</li>
+            </ul>
+        </section>
+        <section id="habilidades">
+            <h2>Habilidades</h2>
+            <ul>
+                <li><strong>Lenguajes:</strong> Java, Python, HTML, CSS</li>
+                <li><strong>Herramientas:</strong> GitHub, NetBeans, Android Studio</li>
+                <li><strong>Competencias:</strong> Trabajo en equipo, resolución de problemas, pensamiento lógico</li>
+            </ul>
+        </section id="proyectos">
+        <section>
+            <h2>Proyectos</h2>
+            <ul>
+                <li><strong><a href="https://github.com/Darwin4050E/Proyecto1P.git">Juego de Cartas Uno en Java</a></strong> – Simulación de turnos entre jugador y máquina.</li>
+                <li><strong><a href="https://github.com/Darwin4050E/SantaBirraDB.git">Sistema para Discoteca con Python y SQL</a></strong> – Gestión administrativa de la discoteca SantaBirra.</li>
+                <li><strong><a href="https://github.com/Darwin4050E/Sistema-Aeropuerto.git">Sistema para Aeropuerto en Java</a></strong> – Gestión de vuelos del aerupuerto Daxing, China.</li>
             </ul>
         </section>
     </main>
     <footer>
-        <small>Darwin Díaz González - Curriculum</small>
+        <p>&copy; 2025 Darwin Díaz. Todos los derechos reservados.</p>
+        <ul>
+            <li><strong>Email:</strong><a></a> dldiaz@espol.edu.ec</li>
+            <li><strong>LinkedIn:</strong><a href="https://www.linkedin.com/in/darwin-diaz-gonz%C3%A1lez/"> Darwin Díaz González</a></li>
+            <li><strong>GitHub:</strong><a href="https://github.com/Darwin4050E"> Darwin4050E</a></li>
+        </ul>
     </footer>
 </body>
 </html>
