--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta description="Currículum Vitae digital de Darwin Díaz, estudiante de Ingeniería en Computación.">
     <meta name="author" content="Darwin Díaz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link res="stylesheet" href="stylesheets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <title>Currículum Vitae - Darwin Díaz</title>
 </head>
 <body>
