--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <li><strong>Herramientas:</strong> GitHub, NetBeans, Android Studio</li>
                 <li><strong>Competencias:</strong> Trabajo en equipo, resolución de problemas, pensamiento lógico</li>
             </ul>
-        </section id="proyectos">
-        <section>
+        </section>
+        <section  id="proyectos">
             <h2 class="subtitle">Proyectos</h2>
             <ul>
                 <li><strong><a href="https://github.com/Darwin4050E/Proyecto1P.git">Juego de Cartas Uno en Java</a></strong> – Simulación de turnos entre jugador y máquina.</li>
