Reestructuración HTML y CSS

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Maitree:wght@200;300;400;500;600;700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Maitree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/style.css">
     <title>Currículum Vitae - Darwin Díaz</title>
 </head>
 <body>
     <header>
-        <h1>Darwin Díaz</h1>
+        <h1>Darwin Díaz González</h1>
         <img src="Perfil - DDG.jpg" id="photo"/>
         <p>Estudiante de Ingeniería en Computación | Desarrollador Web</p>
         <nav>
@@ -126,7 +126,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255168.19938634985!2d-80.1449176354831!3d-2.1524923526169784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d13cbe855805f%3A0x8015a492f4fca473!2sGuayaquil!5e0!3m2!1ses-419!2sec!4v1759778384514!5m2!1ses-419!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <section id="contacto">
-            <h2>Formulario de Contacto</h2>
+            <h2 class="subtitle">Formulario de Contacto</h2>
             <form action="#" method="post">
                 <label for="nombre">Nombre completo:</label>
                 <input type="text" id="nombre" name="nombre" required>
@@ -163,7 +163,7 @@
     <footer>
         <p>&copy; 2025 Darwin Díaz. Todos los derechos reservados.</p>
         <ul>
-            <li><strong>Email:</strong><a></a> dldiaz@espol.edu.ec</li>
+            <li><strong>Email:</strong><a href="mailto:dldiaz@espol.edu.ec"> dldiaz@espol.edu.ec</a></li>
             <li><strong>LinkedIn:</strong><a href="https://www.linkedin.com/in/darwin-diaz-gonz%C3%A1lez/"> Darwin Díaz González</a></li>
             <li><strong>GitHub:</strong><a href="https://github.com/Darwin4050E"> Darwin4050E</a></li>
         </ul>
